--- a/desafio_um/voldemort.html
+++ b/desafio_um/voldemort.html
@@ -9,7 +9,8 @@
     <a href="index.html">Voltar</a>
     <h1>Lord Voldemort</h1>
     <img src="https://d2d7ho1ae66ldi.cloudfront.net/ArquivoNoticias/a3149881-6517-11ed-aa6e-9587410378a2/voldemort.jpg" width="300" alt="">
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugit cum architecto quis inventore deleniti sint porro et nihil dolorum! Dignissimos soluta id necessitatibus deleniti ratione quasi eum officia facere!</p>   
+    <p> Tom Servolo Riddle (31 de dezembro de 1926 – 2 de maio de 1998), mais tarde (e mais) conhecido como Lorde Voldemort, foi um bruxo mestiço considerado o mais perigoso e poderoso bruxo das trevas de todos os tempos.[2] Ele estava entre os maiores bruxos que já existiram, rivalizado apenas por Alvo Dumbledore. Ele era filho do rico trouxa Tom Riddle e da bruxa Mérope Gaunt, que morreu pouco após o parto. Seu pai, Tom Riddle, deixou sua esposa logo depois que ela ficou grávida de seu filho, tendo sido liberado do encantamento de uma poção do amor com a qual tinham iniciado a sua relação. Tom Servolo Riddle nasceu e cresceu em um orfanato trouxa. Mais tarde ingressou na Escola de Magia e Bruxaria de Hogwarts e foi selecionado para a casa Sonserina.
+</p>   
     
 </body>
 </html>
