--- a/harry.html
+++ b/harry.html
@@ -9,7 +9,7 @@
     <a href="index.html">Voltar</a>
     <h1>Harry Potter</h1>
     <img src="https://p2.trrsf.com/image/fget/cf/1200/1600/middle/images.terra.com/2023/04/14/594335823-harry-potter.jpg" width="300" alt="">
-    <p> Harry Tiago Potter é um bruxo inglês mestiço nascido em 31 de julho de 1980[1]. O único filho de Tiago e Lílian Potter teve seu nascimento ofuscado por uma profecia que referia-se a si mesmo, ou a Neville Longbottom, como aquele com o poder de derrotar o Lorde das Trevas.</p>   
+    <p> Harry Tiago Potter é um bruxo inglês mestiço nascido em 31 de julho de 1980. O único filho de Tiago e Lílian Potter teve seu nascimento ofuscado por uma profecia que referia-se a si mesmo, ou a Neville Longbottom, como aquele com o poder de derrotar o Lorde das Trevas.</p>   
     
 </body>
 </html>
